Jumping to keyframe causes Blender to freeze indefinitely #52058

Closed
opened 2017-07-14 18:08:53 +02:00 by ¿? · 4 comments

Window 7 64-bit, GTX 770 OC

Hash: 29ec0b1 (Date: 2017-07-11)

When jumping to keyframes, Blender freezes indefinitely, without any errors/notifications in the console.

Steps to Reproduce: Open the included file, then jump to the previous keyframe untitled.blend

Source file contains nsfw material. Example file is missing linked groups (character+rig) and contains text of the nsfw actions.
The linked items are not included because it's reproducible without the files.

It appears to crash when jumping to the frames that are offset from the NLA track

Window 7 64-bit, GTX 770 OC Hash: 29ec0b1 (Date: 2017-07-11) When jumping to keyframes, Blender freezes indefinitely, without any errors/notifications in the console. Steps to Reproduce: Open the included file, then jump to the previous keyframe [untitled.blend](https://archive.blender.org/developer/F667153/untitled.blend) Source file contains nsfw material. Example file is missing linked groups (character+rig) and contains text of the nsfw actions. The linked items are not included because it's reproducible without the files. It appears to crash when jumping to the frames that are offset from the NLA track
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ebone

Added subscriber: @Ebone
Joshua Leung self-assigned this 2017-07-16 12:45:37 +02:00

This issue was referenced by 7021aa245d

This issue was referenced by 7021aa245ddaae67fdc41450ea83b3643f50b28c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52058
No description provided.